--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -21,7 +21,8 @@
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
