--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@vueuse/core": "^13.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "incomplete-json-parser": "^1.1.4",
     "lucide-vue-next": "^0.522.0",
     "nuxt": "^3.17.5",
     "reka-ui": "^2.3.1",
