--- a/project/api/pyproject.toml
+++ b/project/api/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "debugpy==1.8.14",
     "decorator==5.2.1",
     "executing==2.2.0",
+    "fastapi>=0.115.13",
     "filelock==3.18.0",
     "filetype==1.2.0",
     "frozenlist==1.7.0",
