--- a/project/api/pyproject.toml
+++ b/project/api/pyproject.toml
@@ -101,6 +101,7 @@ dependencies = [
     "typing-inspect==0.9.0",
     "typing-inspection==0.4.1",
     "urllib3==2.4.0",
+    "uvicorn>=0.34.3",
     "wcwidth==0.2.13",
     "yarl==1.20.1",
     "zstandard==0.23.0",
