--- a/project/api/pyproject.toml
+++ b/project/api/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "langchain-core==0.3.65",
     "langchain-google-genai==2.1.5",
     "langchain-huggingface==0.3.0",
+    "langchain-mistralai>=0.2.10",
     "langchain-text-splitters==0.3.8",
     "langsmith==0.3.45",
     "marshmallow==3.26.1",
