--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -14,8 +14,10 @@
     "@huggingface/inference": "^4.0.6",
     "@tailwindcss/vite": "^4.1.10",
     "@vueuse/core": "^13.4.0",
+    "body-parser": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.0",
     "incomplete-json-parser": "^1.1.4",
     "lucide-vue-next": "^0.522.0",
     "nuxt": "^3.17.5",
