--- a/web-scraping/pyproject.toml
+++ b/web-scraping/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
-name = "langgraph"
+name = "web-scraping"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "beautifulsoup4>=4.13.4",
+    "requests>=2.32.4",
+]
