--- a/web-scraping/pyproject.toml
+++ b/web-scraping/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asttokens>=3.0.0",
     "beautifulsoup4>=4.13.4",
     "requests>=2.32.4",
 ]
